@@ -1,5 +1,9 @@
 2007-07-13:
-	* srv/v5.c: treat a "client revoked" error (which is generated by
+	* src/password.c: report the synthetic PAM result from attempting to
+	get password-changing creds (part of #230439)
+
+2007-07-13:
+	* src/v5.c: treat a "client revoked" error (which is generated by
 	disabling the account, at least on a Windows KDC) as an "unknown
 	principal" error (#230442).
 
